# FreeWnn

./: CONTRIBUTORS  COPYRIGHT-j  ChangeLog  ChangeLog.en  INSTALL  INSTALL.en  Imakefile  Makefile.R5ini  Makefile.in  Makefile.ini  Makefile.inst  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  makerule.mk.in
Contrib/dic/gerodic/: Makefile  Makefile.in  g-jinmei.u
Pubdic/: Makefile  Makefile.in  README  bio.u  chimei.u  computer.u  jinmei.u  kihon.u  koyuu.u  setsuji.u  symbol.u  tankan.u
PubdicPlus/: Makefile.in  ctopd.c  fzk.con  fzk.fzkattr  pod.c  pod.c.flc  pubdic.p  wtopd.c
Wnn/: Imakefile  Makefile.in
Wnn/conv/: Imakefile  Makefile.in  cvt_head.h  cvt_key.c  cvt_read.c
Wnn/etc/: Imakefile  bcopy.c  bdic.c  dic_atojis.c  gethinsi.c  hindo.c  mkdir.c  msg.c  pwd.c  py_table.c  revdic.c  server_env.c  sstrings.c  strings.c  vasprintf.c  xutoj.c  yincoding.c  zy_table.c
Wnn/include/: Imakefile  Makefile.in  commonhd.h  config.h  conv.h  copyright.h  cplib.h  demcom.h  etc.h  hinsi.h  hinsi_file.h  jd_sock.h  jdata.h  jh.h  jlib.h  jlib_hide.h  jllib.h  jslib.h  jutil.h  msg.h  rk_spclval.h  romkan.h  wnn_config.h  wnn_malloc.h  wnn_os.h  wnn_string.h  wnnerror.h
Wnn/jd/: Imakefile  Makefile.in  jserverrc  libwnn.msg  serverdefs  uum.msg  uumkey  uumkey.omr  uumkey_e  uumrc.omr  uumrc.rev  uumrc_e  uumrc_vi  wnnenvrc.omr  wnnenvrc.rem  wnnenvrc.rev  wnnenvrc_R.omr  wnnenvrc_R.rem  wnnenvrc_R.rev  wnnstat.msg
Wnn/jlib/: Imakefile  Makefile.in  getopt.c  jl.c  js.c  kankana.c  wnnerrmsg.c
Wnn/jlib.V3/: Imakefile  Makefile.in  jlib.h  jlv3.c
Wnn/jserver/: Imakefile  MALLOC.c  Makefile.FreeBSD4.x  Makefile.in  atojis.c  b_index.c  bnsetu_kai.c  daibn_kai.c  ddefine.h  de.c  de_header.h  de_vars.c  dictoasc.c  dispatch.c  do_dic_env.c  do_dic_no.c  do_env.c  do_filecom.c  do_henkan.c  do_henkan1.c  do_hindo_s.c  error.c  fzk.c  fzk.h  get_kaiarea.c  hinsi_list.c  initjserv.c  jbiki.c  jbiki_b.c  jikouho.c  jikouho_d.c  jishoop.c  jishosub.c  jmt0.c  jserver_id.c  kai_area.c  kaiseki.h  malloc.c  mknode.c  mknode0.c  (+8 more)
Wnn/jutil/: Imakefile  Makefile.FreeBSD4.x  Makefile.in  atod.c  atof.c  atorev.c  dic_head.c  dtoa.c  oldatonewa.c  sort.c  ujisf.c  utilbdic.c  wddel.c  wdreg.c  wnnkill.c  wnnstat.c  wnntouch.c
Wnn/ld/: Imakefile  Makefile.in  uum.msg  uumkey  uumkey_e  uumrc
Wnn/man/: Imakefile  Makefile.in
Wnn/pubdic/: Imakefile  Makefile.in
Wnn/pubdicplus/: Imakefile  Makefile.in
Wnn/romkan/: Imakefile  Makefile.in  rk_bltinfn.c  rk_extvars.h  rk_fundecl.h  rk_header.h  rk_macros.h  rk_main.c  rk_modread.c  rk_read.c  rk_spclval.h  rk_vars.c
Wnn/uum/: Imakefile  Makefile.in  basic_op.c  buffer.h  cursor.c  cvtcode.h  epilogue.c  functions.c  header.c  hinsi.c  history.c  inspect.c  jhlp.c  jikouho.c  jis_in.c  jutil.c  kensaku.c  key_bind.c  kuten.c  printf.c  prologue.c  redraw.c  screen.c  sdefine.h  select_ele.c  setutmp.c  sheader.h  termcap.c  termio.c  touroku.c  ttyfdslot.c  uif.c  w_string.c  wnnrc_op.c
Wnn/wnncons/: Imakefile  Makefile.in
Xwnmo/: Imakefile  Makefile.in
Xwnmo/cd/: Imakefile  Makefile.in
Xwnmo/jd/: Imakefile  Makefile.in  ximconf
Xwnmo/jlib/: Imakefile  Makefile.in
Xwnmo/kd/: Imakefile  Makefile.in
Xwnmo/ld/: Imakefile  Makefile.in
Xwnmo/romkan_m/: Imakefile  Makefile.in  rext.h  rk_alloc.c  rk_bltinfn.c  rk_extvars.h  rk_fundecl.h  rk_header.h  rk_macros.h  rk_main.c  rk_modread.c  rk_multi.h  rk_read.c  rk_spclval.h  rk_vars.c
Xwnmo/td/: Imakefile  Makefile.in
Xwnmo/test/: Imakefile  callback.c  chkcset.c  chkfe.c  chkic.c  chkim.c  chkpsset.c  chkreset.c  chkutil.c  chkxls.c  curses.c  define.h  exvalue.h  final.c  func.h  funcv.c  keyev.c  typedef.h  ximtest.c  xresource.c
Xwnmo/xjutil/: Imakefile  Makefile.in  display.c  hinsi.c  init_w.c  jhlp.c  jutil.c  kensaku.c  keyin.c  message.c  prologue.c  sxheader.h  touroku.c  uif.c  xext.h  xheader.c  xichiran.c  xj.msg.ja_JP  xj.msg.ko_KR  xj.msg.zh_CN  xj.msg.zh_TW  xjutil.h  xselectele.c  xw_touroku.c
Xwnmo/xwnmo/: Imakefile  Makefile.in  SpotProto.h  XIMproto.h  Ximprot.h  basic_op.c  box.c  byte_swap.c  callback.c  change.c  client.c  client.h  cursor.c  display.c  do_socket.c  do_xjpdrct.c  do_xjplib.c  do_xjplib.h  do_xjutil.c  evdispatch.c  ext.h  functions.c  header.c  history.c  ichiran.c  init.c  init_w.c  inspect.c  jhlp.c  jikouho.c  jis_in.c  jutil.c  key_bind.c  keyin.c  killxwnmo.c  kuten.c  localalloc.c  message.c  multi_lang.c  printf.c  (+20 more)
cWnn/: Imakefile  Makefile.in
cWnn/cd/: Imakefile  Makefile.in  cixing.data  cserverrc  libwnn.msg  uum.msg  uumkey  uumkey_e  uumkey_p  uumrc  uumrc_p  uumrc_z  wnnenvrc  wnnenvrc_Qi  wnnenvrc_QiR  wnnenvrc_R  wnnenvrc_Wu  wnnenvrc_WuR  wnnstat.msg
cWnn/cdic/: Imakefile  Makefile.in  basic.u  con.jirattr  con.jircon  level_1.u  level_2.u
cWnn/conv/: Imakefile  Makefile.in
cWnn/etc/: Imakefile  Makefile.in
cWnn/include/: Imakefile  Makefile.in
cWnn/jlib/: Imakefile  Makefile.in
cWnn/jserver/: Imakefile  Makefile.in
cWnn/jutil/: Imakefile  Makefile.in
cWnn/man/: Imakefile  Makefile.in
cWnn/romkan/: Imakefile  Makefile.in
cWnn/td/: Imakefile  Makefile.in  cixing.data  libwnn.msg  tserverrc  uum.msg  uumkey  uumkey_e  uumkey_p  uumrc  uumrc_p  uumrc_z  wnnenvrc  wnnenvrc_R  wnnstat.msg
cWnn/tdic/: Imakefile  Makefile.in  cns_ch.u  cns_wd.u  con.attr  con.jirattr  con.jircon  con.shuutan  con.shuutanR
cWnn/uum/: Imakefile  Makefile.in
config/: Project.tmpl
configR5/: Project.tmpl
kWnn/: Imakefile  Makefile.in
kWnn/conv/: Imakefile  Makefile.in
kWnn/etc/: Imakefile  Makefile.in
kWnn/include/: Imakefile  Makefile.in
kWnn/jlib/: Imakefile  Makefile.in
kWnn/jserver/: Imakefile  Makefile.in
kWnn/jutil/: Imakefile  Makefile.in
kWnn/kd/: Imakefile  Makefile.in  hinsi.data  kserverrc  libwnn.msg  uum.msg  uumkey  uumrc  wnnenvrc  wnnenvrc_R  wnnstat.msg
kWnn/kdic/: Imakefile  Makefile.in  fzk.attr  fzk.con  fzk.fzkattr  fzk.jirattr  fzk.jircon  fzk.master  fzk.shuutan  single.u
kWnn/romkan/: Imakefile  Makefile.in
kWnn/uum/: Imakefile  Makefile.in
(+343 files in other folders)
